[project]
name = "fraud detection"
version = "0.1.0"
description = "End to End fraud detection"
authors = [
    {name = "Mani Krishna Mandepudi, Rania Soetirto"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
